[package]
name = "sylt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_rapier2d = { version = "0.20.0", features = ["parallel", "debug-render-2d"]}
bevy-inspector-egui = "0.17.0"
bevy_prototype_debug_lines = "0.9.0"
rand = "0.8.5"
rand_distr = "0.4.3"
bevy-yoleck = { git = "https://github.com/ZeeQyu/bevy-yoleck", rev = "b01a40dbc9afc7fb36026ef376d21cddfb660d91", features = ["vpeol_2d"] }
iyes_loopless = "0.9.1"
serde = "1.0.152"
serde_json = "1.0.93"
