[package]
name = "sylt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.21.0", features = ["parallel", "debug-render-2d"] }
bevy-inspector-egui = "0.18.0"
bevy_prototype_debug_lines = "0.10.0"
rand = "0.8.5"
rand_distr = "0.4.3"
#bevy-yoleck = { path = "../bevy-yoleck", features = ["vpeol_2d"] }
bevy-yoleck = { git = "https://github.com/ZeeQyu/bevy-yoleck", rev = "0f77b9aa327e151ac07dae371ace2dab07a20f1d", features = ["vpeol_2d"] }
#bevy-yoleck = { version = "0.7", features = ["vpeol_2d"] }
serde = "1.0.152"
serde_json = "1.0.93"
